WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/QuoteLineItemGroupID__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemGroupID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Line Item Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>