WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/QuoteLineItemID__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Line Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>