WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressLine1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>