WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressLine2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>