WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>