WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingContact__c.field-meta.xml
<CustomField>
    <fullName>ShippingContact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>