WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>