WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>