WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>