WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>