WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/WEXAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>WEXAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>