WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/WEXAccountTaxExemptCertificateID__c.field-meta.xml
<CustomField>
    <fullName>WEXAccountTaxExemptCertificateID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Account Tax Exempt Certificate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>