WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/WEXAccountTaxExemptStatus__c.field-meta.xml
<CustomField>
    <fullName>WEXAccountTaxExemptStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Account Tax Exempt Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>