WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/WEXBillingAccountName__c.field-meta.xml
<CustomField>
    <fullName>WEXBillingAccountName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Billing Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>