WexGit/Wex_DX/force-app/main/default/objects/Zuora__Subscription__c/fields/WEXTaxedUpfront__c.field-meta.xml
<CustomField>
    <fullName>WEXTaxedUpfront__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Taxed Upfront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>